[Update] Config Page: Transcription, Whisper models. Add desc.

--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -186,7 +186,9 @@ config_page:
             label: 音声認識で使用するエンジン
         whisper_weight_type:
             label: Whisperモデルのタイプ
-            desc: 容量が大きいモデルほど精度は高いですが、その分CPUやGPUを占有します。
+            desc: |-
+                容量が大きいモデルほど精度は高いですが、その分CPUやGPUを占有します。
+                ※特にmediumより容量の大きいモデルは、CPU/GPUの性能によっては使用すらも困難です。
             model_template: '{{model_name}} モデル ({{capacity}})'
             recommended_model_template: '{{model_name}} モデル ({{capacity}}) (推奨)'
         whisper_compute_device:
