--- a/locales/en.yml
+++ b/locales/en.yml
@@ -188,7 +188,9 @@ config_page:
             label: Transcription Engine
         whisper_weight_type:
             label: Whisper Model
-            desc: Models with larger capacities tend to have higher accuracy, but they also consume more CPU and GPU resources.
+            desc: |-
+                Larger models tend to have higher accuracy, but they also consume more CPU or GPU resources.
+                Especially for models larger than medium, it may be difficult or even impossible to use them depending on the performance of your CPU/GPU.
             model_template: '{{model_name}} model ({{capacity}})'
             recommended_model_template: '{{model_name}} model ({{capacity}}) (Recommended)'
         whisper_compute_device:
