--- a/locales/en.yml
+++ b/locales/en.yml
@@ -258,6 +258,16 @@ config_page:
             label: Send Received Message To VRChat
             desc: Send the message you received from the speaker's sound to VRChat's chatbox.
 
+    hotkeys:
+        toggle_vrct_visibility:
+            label: Toggle VRCT Visibility
+        toggle_translation:
+            label: Toggle Translation
+        toggle_transcription_send:
+            label: Toggle Voice2Chatbox
+        toggle_transcription_receive:
+            label: Toggle Speaker2Log
+
     advanced_settings:
         osc_ip_address:
             label: OSC IP Address
