--- a/locales/en.yml
+++ b/locales/en.yml
@@ -262,11 +262,11 @@ config_page:
         toggle_vrct_visibility:
             label: Toggle VRCT Visibility
         toggle_translation:
-            label: Toggle Translation
+            label: Toggle {{translation}}
         toggle_transcription_send:
-            label: Toggle Voice2Chatbox
+            label: Toggle {{transcription_send}}
         toggle_transcription_receive:
-            label: Toggle Speaker2Log
+            label: Toggle {{transcription_receive}}
 
     advanced_settings:
         osc_ip_address:
