--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -92,6 +92,7 @@ config_page:
         translation: 翻訳
         transcription: 音声認識
         others: その他
+        hotkeys: ホットキー
         advanced_settings: 高度な設定
 
     device:
@@ -258,6 +259,12 @@ config_page:
     hotkeys:
         toggle_vrct_visibility:
             label: VRCTの最小化/アクティブ化の切り替え
+        toggle_translation:
+            label: '{{translation}}機能切り替え'
+        toggle_transcription_send:
+            label: '{{transcription_send}}機能切り替え'
+        toggle_transcription_receive:
+            label: '{{transcription_receive}}機能切り替え'
 
     advanced_settings:
         osc_ip_address:
