--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -4,278 +4,235 @@
 # =================================
 
 common:
-    go_back_button_label: 戻る
+    go_back_button_label: "戻る"
 
 main_page:
-    translation: 翻訳
-    transcription_send: 音声認識（マイク）
-    transcription_receive: 音声認識（スピーカー）
-    foreground: 最前面表示
-    language_settings: 言語設定
-    your_language: あなたの言語
-    translate_each_other_label: 双方向に翻訳
-    swap_button_label: 言語を入れ替え
-    target_language: 相手の言語
-    translator: 翻訳エンジン
-    translator_ctranslate2: オフライン翻訳 (Default)
+    translation: "翻訳"
+    transcription_send: "音声認識（マイク）"
+    transcription_receive: "音声認識（スピーカー）"
+    foreground: "最前面表示"
+    language_settings: "言語設定"
+    your_language: "あなたの言語"
+    translate_each_other_label: "双方向に翻訳"
+    swap_button_label: "言語を入れ替え"
+    target_language: "相手の言語"
+    translator: "翻訳エンジン"
+    translator_ctranslate2: "オフライン翻訳 (Default)"
 
     translator_selector:
-        is_selected_same_language: |-
-            「{{your_language}}」と「{{target_language}}」に同じ言語が選択がされているため、「{{translator_ctranslate2}}」のみが使用できます。
+        is_selected_same_language: "{{your_language}}」と「{{target_language}}」に同じ言語が選択がされているため、「{{translator_ctranslate2}}」のみが使用できます。"
 
     message_log:
-        all: 全て
-        sent: 送信
-        received: 受信
-        system: システム
+        all: "全て"
+        sent: "送信"
+        received: "受信"
+        system: "システム"
 
-        show_resend_button: 再送信ボタンを表示する
-        resend_button_on_hover_desc: 長押しで送信
+        show_resend_button: "再送信ボタンを表示する"
+        resend_button_on_hover_desc: "長押しで送信"
 
-    # textbox_system_message:
-    #     enabled_translation: 翻訳機能をONにしました。
-    #     disabled_translation: 翻訳機能をOFFしました。
-    #     enabled_voice2chatbox: マイクからの音声入力、文字起こしを開始します。
-    #     disabled_voice2chatbox: マイクからの音声入力、文字起こしを終了しました。
-    #     enabled_speaker2log: スピーカーからの音声聞き取り、文字起こしを開始します。
-    #     disabled_speaker2log: スピーカーからの音声聞き取り、文字起こしを終了しました。
-    #     enabled_foreground: 画面を常に最前面へ固定します。
-    #     disabled_foreground: 最前面への固定を解除しました。
-    #     auth_key_success: 認証キーの更新が完了しました。
-    #     auth_key_error: 認証キーが間違っているか、API使用制限が上限に達しています。
-    #     no_mic_device_detected_error: マイクデバイスが検出されませんでした。
-    #     no_speaker_device_detected_error: スピーカーデバイスが検出されませんでした。
-    #     translation_engine_limit_error: 翻訳エンジンを自動的に変更しました。対象翻訳エンジンへのリクエストが多すぎるため、一時的にアクセスが制限されています。同じ翻訳エンジンを使用したい場合はしばらく待ってから、VRCTの再起動をしてもう一度試してみてください。
-    #     detected_by_word_filter: ワードフィルターに登録されている単語 {{detected_message}} が検出されたため送信しませんでした。
-    #     selected_your_language: 「あなたの言語」 を {{your_language}} に設定しました。
-    #     selected_target_language: 「相手の言語」 を {{target_language}} に設定しました。
-    #     switched_language_preset_tab: 言語プリセット番号 {{tab_no}} に切り替わりました。
-    #     latest_language_setting: 現在「あなたの言語」は {{your_language}}、「相手の言語」は {{target_language}} に設定されています。
-    #     opened_web_page_booth: お使いのブラウザで、Boothのページを開きました。
-    #     opened_web_page_vrct_documents: |-
-    #         お使いのブラウザで、VRCTのドキュメントを開きました。使用方法などはそちらに記載されています。
-    #         不具合、ご要望、その他お問い合わせはドキュメント最下部にあるLinks、「お問合せフォーム」もしくはX (元Twitter) にて気軽にご連絡ください！
-
-    state_text_enabled: 有効
-    state_text_disabled: 無効
+    state_text_enabled: "有効"
+    state_text_disabled: "無効"
 
     language_selector:
-        title_your_language: あなたの言語
-        title_target_language: 相手の言語
+        title_your_language: "あなたの言語"
+        title_target_language: "相手の言語"
 
-    update_available: 新しいバージョンが出ました！
-    updating: アップデート中...
+    update_available: "新しいバージョンが出ました！"
+    updating: "アップデート中..."
 
 update_modal:
-    cpu_desc: 処理デバイスとしてCPUのみを使用
-    cuda_desc: 処理デバイスとしてCPUとNVIDIA製のGPUを選択可能
-    cuda_compare_cpu_desc: GPU選択時、CPUと比べて処理が高速
-    cuda_disk_space_desc: 約{{size}}のディスク容量が必要
-    close_modal: 閉じる
-    download_latest_and_restart: |-
-        最新版がダウンロードされ、
-        アプリは自動的に再起動します。
-    is_latest_version_already: すでに最新版を使用中
-    is_current_compute_device: 現在使用中のバージョン
+    cpu_desc: "処理デバイスとしてCPUのみを使用"
+    cuda_desc: "処理デバイスとしてCPUとNVIDIA製のGPUを選択可能"
+    cuda_compare_cpu_desc: "GPU選択時、CPUと比べて処理が高速"
+    cuda_disk_space_desc: "約{{size}}のディスク容量が必要"
+    close_modal: "閉じる"
+    download_latest_and_restart: "最新版がダウンロードされ、\nアプリは自動的に再起動します。"
+    is_latest_version_already: "すでに最新版を使用中"
+    is_current_compute_device: "現在使用中のバージョン"
 
 config_page:
-    version: バージョン {{version}}
-    # config_title: 設定
-    # compact_mode: コンパクトモード
-    # restart_message: 再起動して変更を適用する。
-    # common_error_message:
-    #     invalid_value: 無効な値です。
-    model_download_button_label: ダウンロード
+    version: "バージョン {{version}}"
+    model_download_button_label: "ダウンロード"
     side_menu_labels:
-        device: デバイス
-        appearance: デザイン
-        translation: 翻訳
-        transcription: 音声認識
-        others: その他
-        hotkeys: ホットキー
-        advanced_settings: 高度な設定
+        device: "デバイス"
+        appearance: "デザイン"
+        translation: "翻訳"
+        transcription: "音声認識"
+        others: "その他"
+        hotkeys: "ホットキー"
+        advanced_settings: "高度な設定"
 
     device:
-        check_volume: 音量チェック
+        check_volume: "音量チェック"
         mic_host_device:
-            label: マイク （デバイス）
-            label_auto_select: 自動選択
-            label_host: ホスト/ドライバー
-            label_device: デバイス
+            label: "マイク （デバイス）"
+            label_auto_select: "自動選択"
+            label_host: "ホスト/ドライバー"
+            label_device: "デバイス"
         mic_dynamic_energy_threshold:
-            label_for_automatic: 'マイク入力感度の調整 (現在の設定: 自動)'
-            desc_for_automatic: マイクの入力感度を自動的に調節する。
-            label_for_manual: 'マイク入力感度の調整 (現在の設定: 手動)'
-            desc_for_manual: スライダーを調整して入力感度を手動で決められます。マイクのアイコンを押すと、実際に声を入力し、音量を確認しながら調節できます。
-            error_message: 0 から {{max}} までの数値で設定できます。
+            label_for_automatic: "マイク入力感度の調整 (現在の設定: 自動)"
+            desc_for_automatic: "マイクの入力感度を自動的に調節する。"
+            label_for_manual: "マイク入力感度の調整 (現在の設定: 手動)"
+            desc_for_manual: "スライダーを調整して入力感度を手動で決められます。マイクのアイコンを押すと、実際に声を入力し、音量を確認しながら調節できます。"
+            error_message: "0 から {{max}} までの数値で設定できます。"
         speaker_device:
-            label: スピーカー （デバイス）
-            label_auto_select: 自動選択
+            label: "スピーカー （デバイス）"
+            label_auto_select: "自動選択"
         speaker_dynamic_energy_threshold:
-            label_for_automatic: 'スピーカー入力感度の調整 (現在の設定: 自動)'
-            desc_for_automatic: スピーカーの入力感度を自動的に調節する。
-            label_for_manual: 'スピーカー入力感度の調整 (現在の設定: 手動)'
-            desc_for_manual: スライダーを調整して入力感度を手動で決められます。ヘッドフォンのアイコンを押すと、実際に音声を聞き取り、音量を確認しながら調節できます。
-            error_message: 0 から {{max}} までの数値で設定できます。
-            no_device_error_message: スピーカーデバイスが検出されませんでした。
+            label_for_automatic: "スピーカー入力感度の調整 (現在の設定: 自動)"
+            desc_for_automatic: "スピーカーの入力感度を自動的に調節する。"
+            label_for_manual: "スピーカー入力感度の調整 (現在の設定: 手動)"
+            desc_for_manual: "スライダーを調整して入力感度を手動で決められます。ヘッドフォンのアイコンを押すと、実際に音声を聞き取り、音量を確認しながら調節できます。"
+            error_message: "0 から {{max}} までの数値で設定できます。"
+            no_device_error_message: "スピーカーデバイスが検出されませんでした。"
 
     appearance:
         transparency:
-            label: 透明度
-            desc: メイン画面の透明度を変更できます。
+            label: "透明度"
+            desc: "メイン画面の透明度を変更できます。"
         ui_size:
-            label: UIサイズ
+            label: "UIサイズ"
         textbox_ui_size:
-            label: ログのフォントサイズ
-            desc: ログに表示されるフォントのサイズを、UIサイズを基準にして倍率を変えられます。
+            label: "ログのフォントサイズ"
+            desc: "ログに表示されるフォントのサイズを、UIサイズを基準にして倍率を変えられます。"
         send_message_button_type:
-            label: メッセージ送信ボタン
-            hide: 非表示 (エンターキーを使って送信)
-            show: 表示
-            show_and_disable_enter_key: 表示し、エンターキーでの送信を無効
+            label: "メッセージ送信ボタン"
+            hide: "非表示 (エンターキーを使って送信)"
+            show: "表示"
+            show_and_disable_enter_key: "表示し、エンターキーでの送信を無効"
         font_family:
-            label: 使用フォント
+            label: "使用フォント"
         ui_language:
-            label: UIの言語
+            label: "UIの言語"
 
     translation:
         ctranslate2_weight_type:
-            label: オフライン翻訳のタイプ
-            desc: 翻訳エンジン（オフライン翻訳）で翻訳する際に、使用する翻訳モデルを選択できます。
-            small: 通常モデル ({{capacity}})
-            large: 高精度モデル ({{capacity}})
+            label: "オフライン翻訳のタイプ"
+            desc: "翻訳エンジン（オフライン翻訳）で翻訳する際に、使用する翻訳モデルを選択できます。"
+            small: "通常モデル ({{capacity}})"
+            large: "高精度モデル ({{capacity}})"
         ctranslate2_compute_device:
-            label: オフライン翻訳の処理デバイス
+            label: "オフライン翻訳の処理デバイス"
         deepl_auth_key:
-            label: DeepL 認証キー
-            desc: |-
-                使用の際は、メイン画面にある {{translator}} をDeepL_APIに変更してください。
-                ※対応していない言語もあります。
-            open_auth_key_webpage: DeepLアカウントページを開く
-            save: 保存
-            edit: 編集
-            auth_key_success: 認証キーの更新が完了しました。
-            auth_key_error: 認証キーが間違っているか、API使用制限が上限に達しています。
+            label: "DeepL 認証キー"
+            desc: "使用の際は、メイン画面にある {{translator}} をDeepL_APIに変更してください。\n※対応していない言語もあります。"
+            open_auth_key_webpage: "DeepLアカウントページを開く"
+            save: "保存"
+            edit: "編集"
+            auth_key_success: "認証キーの更新が完了しました。"
+            auth_key_error: "認証キーが間違っているか、API使用制限が上限に達しています。"
 
     transcription:
-        section_label_mic: マイク
-        section_label_speaker: スピーカー
-        section_label_transcription_engines: 音声認識エンジン
+        section_label_mic: "マイク"
+        section_label_speaker: "スピーカー"
+        section_label_transcription_engines: "音声認識エンジン"
         mic_record_timeout:
-            label: 入力が終了したとみなす無音時間
-            desc: 無音を検出し、設定された秒数経過すると、音声入力が終了したとみなします。
-            error_message: 0 以上で 「{{mic_phrase_timeout_label}}」より大きくすることはできません。
+            label: "入力が終了したとみなす無音時間"
+            desc: "無音を検出し、設定された秒数経過すると、音声入力が終了したとみなします。"
+            error_message: "0 以上で 「{{mic_phrase_timeout_label}}」より大きくすることはできません。"
         mic_phrase_timeout:
-            label: 一度に文字起こしする時間の長さ
-            desc: 設定された秒数ごとに文字起こし処理が行われます。
-            error_message: 0 以上で 「{{mic_record_timeout_label}}」より小さくすることはできません。
+            label: "一度に文字起こしする時間の長さ"
+            desc: "設定された秒数ごとに文字起こし処理が行われます。"
+            error_message: "0 以上で 「{{mic_record_timeout_label}}」より小さくすることはできません。"
         mic_max_phrase:
-            label: 送信するまでに保持する単語数
-            desc: 文字起こしされた単語数の下限値で、この数値を超えた場合のみ結果をVRChatへ送信し、ログに表示します。
-            error_message: 0以上の数値を設定できます。
+            label: "送信するまでに保持する単語数"
+            desc: "文字起こしされた単語数の下限値で、この数値を超えた場合のみ結果をVRChatへ送信し、ログに表示します。"
+            error_message: "0以上の数値を設定できます。"
         mic_word_filter:
-            label: ワードフィルター
-            desc: |-
-                登録された単語を検出すると、その文章は送信されません。
-                「,」カンマで区切ると、まとめて複数の単語を追加できます。
-                ※重複した単語は登録されません。
-            add_button_label: 追加
-            count_desc: '現在登録されている単語数: {{count}}'
+            label: "ワードフィルター"
+            desc: "登録された単語を検出すると、その文章は送信されません。\n「,」カンマで区切ると、まとめて複数の単語を追加できます。\n※重複した単語は登録されません。"
+            add_button_label: "追加"
+            count_desc: "現在登録されている単語数: {{count}}"
         speaker_record_timeout:
-            label: 入力が終了したとみなす無音時間
-            desc: 無音を検出し、設定された秒数経過すると、音声入力が終了したとみなします。
-            error_message: 0 以上で 「{{speaker_phrase_timeout_label}}」より大きくすることはできません。
+            label: "入力が終了したとみなす無音時間"
+            desc: "無音を検出し、設定された秒数経過すると、音声入力が終了したとみなします。"
+            error_message: "0 以上で「{{speaker_phrase_timeout_label}}」より大きくすることはできません。"
         speaker_phrase_timeout:
-            label: 一度に文字起こしする時間の長さ
-            desc: 設定された秒数ごとに文字起こし処理が行われます。
-            error_message: 0 以上で 「{{speaker_record_timeout_label}}」より小さくすることはできません。
+            label: "一度に文字起こしする時間の長さ"
+            desc: "設定された秒数ごとに文字起こし処理が行われます。"
+            error_message: "0 以上で「{{speaker_record_timeout_label}}」より小さくすることはできません。"
         speaker_max_phrase:
-            label: ログとして表示するまでに保持する単語数
-            desc: 文字起こしされた単語数の下限値で、この数値を超えた場合のみ結果をログに表示します。
-            error_message: 0以上の数値を設定できます。
+            label: "ログとして表示するまでに保持する単語数"
+            desc: "文字起こしされた単語数の下限値で、この数値を超えた場合のみ結果をログに表示します。"
+            error_message: "0以上の数値を設定できます。"
         select_transcription_engine:
-            label: 音声認識で使用するエンジン
+            label: "音声認識で使用するエンジン"
         whisper_weight_type:
-            label: Whisperモデルのタイプ
-            desc: |-
-                容量が大きいモデルほど精度は高いですが、その分CPUやGPUを占有します。
-                ※特にmediumより容量の大きいモデルは、CPU/GPUの性能によっては使用すらも困難です。
-            model_template: '{{model_name}} モデル ({{capacity}})'
-            recommended_model_template: '{{model_name}} モデル ({{capacity}}) (推奨)'
+            label: "Whisperモデルのタイプ"
+            desc: "容量が大きいモデルほど精度は高いですが、その分CPUやGPUを占有します。\n※特にmediumより容量の大きいモデルは、CPU/GPUの性能によっては使用すらも困難です。"
+            model_template: "{{model_name}} モデル ({{capacity}})"
+            recommended_model_template: "{{model_name}} モデル ({{capacity}}) (推奨)"
         whisper_compute_device:
-            label: Whisperで使用する処理デバイス
+            label: "Whisperで使用する処理デバイス"
 
     vr:
-        single_line: 一行
-        multi_lines: 複数行
-        overlay_enable: 有効にする
-        restore_default_settings: 初期値に戻す
-        position: 位置
-        rotation: 回転
-        x_position: X軸（左右）
-        y_position: Y軸（上下）
-        z_position: Z軸（前後）
-        x_rotation: X軸の回転
-        y_rotation: Y軸の回転
-        z_rotation: Z軸の回転
+        single_line: "一行"
+        multi_lines: "複数行"
+        overlay_enable: "有効にする"
+        restore_default_settings: "初期値に戻す"
+        position: "位置"
+        rotation: "回転"
+        x_position: "X軸（左右）"
+        y_position: "Y軸（上下）"
+        z_position: "Z軸（前後）"
+        x_rotation: "X軸の回転"
+        y_rotation: "Y軸の回転"
+        z_rotation: "Z軸の回転"
         sample_text_button:
-            start: |-
-                サンプルテキストを
-                Overlayに送信する
-            stop: 送信を停止
-            sample_text: サンプルテキスト
-        opacity: 透明度
-        ui_scaling: サイズ
-        display_duration: 表示時間
-        fadeout_duration: フェードアウト時間
-        common_settings: 共通設定
-        hmd: HMD
-        left_hand: 左手
-        right_hand: 右手
-        tracker: 表示するトラッカーの位置
+            start: "サンプルテキストを\nOverlayに送信する"
+            stop: "送信を停止"
+            sample_text: "サンプルテキスト"
+        opacity: "透明度"
+        ui_scaling: "サイズ"
+        display_duration: "表示時間"
+        fadeout_duration: "フェードアウト時間"
+        common_settings: "共通設定"
+        hmd: "HMD"
+        left_hand: "左手"
+        right_hand: "右手"
+        tracker: "表示するトラッカーの位置"
         overlay_show_only_translated_messages:
-            label: 翻訳後のメッセージのみ表示する
+            label: "翻訳後のメッセージのみ表示する"
 
     others:
-        section_label_sounds: サウンド
+        section_label_sounds: "サウンド"
         auto_clear_the_message_box:
-            label: 送信後はチャットボックスを空にする
+            label: "送信後はチャットボックスを空にする"
         send_only_translated_messages:
-            label: 翻訳後のメッセージのみ送信する
+            label: "翻訳後のメッセージのみ送信する"
         auto_export_message_logs:
-            label: 会話ログを自動的に保存する
-            desc: テキストファイルとしてログがlogsフォルダ内に保存されます。
+            label: "会話ログを自動的に保存する"
+            desc: "テキストファイルとしてログがlogsフォルダ内に保存されます。"
         vrc_mic_mute_sync:
-            label: VRCマイクミュート同期
-            desc: |-
-                VRChatのマイクがミュートされている間は、メッセージをVRChatに送信しません。
-                ※若干の遅延はあります。また、Push-To-Talkは非対応です。
+            label: "VRCマイクミュート同期"
+            desc: "VRChatのマイクがミュートされている間は、メッセージをVRChatに送信しません。\n※若干の遅延はあります。また、Push-To-Talkは非対応です。"
         send_message_to_vrc:
-            label: VRChatにメッセージを送信する
-            desc: サポート対象外ですが、VRChatにメッセージを送信せずに使う方法があります。送信したい場合、この機能を有効にする事を忘れないでください。
+            label: "VRChatにメッセージを送信する"
+            desc: "サポート対象外ですが、VRChatにメッセージを送信せずに使う方法があります。送信したい場合、この機能を有効にする事を忘れないでください。"
         notification_vrc_sfx:
-            label: チャット送信時にチャットボックスの通知音を鳴らす
-            desc: この機能を無効にすると、他の人が聞こえるチャットボックスの通知音を鳴らさず、静かに送信します。
+            label: "チャット送信時にチャットボックスの通知音を鳴らす"
+            desc: "この機能を無効にすると、他の人が聞こえるチャットボックスの通知音を鳴らさず、静かに送信します。"
         send_received_message_to_vrc:
-            label: 受信したメッセージをVRChatに送信する
-            desc: スピーカーから聞き取り、文字起こしされたメッセージをVRChatに送信します。
+            label: "受信したメッセージをVRChatに送信する"
+            desc: "スピーカーから聞き取り、文字起こしされたメッセージをVRChatに送信します。"
 
     hotkeys:
         toggle_vrct_visibility:
-            label: VRCTの最小化/アクティブ化の切り替え
+            label: "VRCTの最小化/アクティブ化の切り替え"
         toggle_translation:
-            label: '{{translation}}機能切り替え'
+            label: "{{translation}}機能切り替え"
         toggle_transcription_send:
-            label: '{{transcription_send}}機能切り替え'
+            label: "{{transcription_send}}機能切り替え"
         toggle_transcription_receive:
-            label: '{{transcription_receive}}機能切り替え'
+            label: "{{transcription_receive}}機能切り替え"
 
     advanced_settings:
         osc_ip_address:
-            label: OSC IP Address
+            label: "OSC IP Address"
         osc_port:
-            label: OSC Port
+            label: "OSC Port"
         open_config_filepath:
-            label: 設定ファイルを開く
+            label: "設定ファイルを開く"
         switch_compute_device:
-            label: VRCT CPU/GPUバージョンの切り替え
+            label: "VRCT CPU/GPUバージョンの切り替え"
