--- a/locales/zh-Hans.yml
+++ b/locales/zh-Hans.yml
@@ -17,7 +17,7 @@ main_page:
     swap_button_label: "互换"
     target_language: "目标语言"
     translator: "翻译器"
-    translator_ctranslate2: "离线翻译(默认)"
+    # translator_label_default: "默认"
 
     message_log:
         all: "全部"
