--- a/locales/en.yml
+++ b/locales/en.yml
@@ -6,6 +6,24 @@
 common:
     go_back_button_label: "Go Back"
 
+common_error:
+    no_device_mic: "No mic device detected."
+    no_device_speaker: "No Speaker device detected."
+    threshold_invalid_value: "You can set it with a value between {{min}} to {{max}}."
+    failed_download_weight_ctranslate2: "CTranslate2 weight download error."
+    failed_download_weight_whisper: "Whisper weight download error."
+    translation_limit: "Translation engine limit error."
+    deepl_auth_key_invalid_length: "DeepL auth key length is not correct."
+    deepl_auth_key_failed_authentication: "Authentication failure of deepL auth key."
+
+    invalid_value_mic_record_timeout: "It cannot be greater than '{{mic_phrase_timeout_label}}' with a value of 0 or more."
+    invalid_value_mic_phrase_timeout: "It cannot be set lower than '{{mic_record_timeout_label}}' with a value of 0 or more."
+    invalid_value_mic_max_phrase: "You can set a number equal to or greater than 0."
+
+    invalid_value_speaker_record_timeout: "It cannot be greater than '{{speaker_phrase_timeout_label}}' with a value of 0 or more."
+    invalid_value_speaker_phrase_timeout: "It cannot be set lower than '{{speaker_record_timeout_label}}' with a value of 0 or more."
+    invalid_value_speaker_max_phrase: "You can set a number equal to or greater than 0."
+
 main_page:
     translation: "Translation"
     transcription_send: "Voice2Chatbox"
@@ -75,7 +93,6 @@ config_page:
             desc_for_automatic: "Automatically determine microphone input sensitivity."
             label_for_manual: "Mic Energy Threshold (Current Setting: Manual)"
             desc_for_manual: "Manually determine the microphone input sensitivity using the slider. Press the microphone icon to input your voice and adjust the sensitivity while monitoring the volume."
-            error_message: "You can set it with a value between 0 to {{max}}."
         speaker_device:
             label: "Speaker Device"
             label_auto_select: "Auto Select"
@@ -85,8 +102,6 @@ config_page:
             desc_for_automatic: "Automatically determine speaker input sensitivity."
             label_for_manual: "Speaker Energy Threshold (Current Setting: Manual)"
             desc_for_manual: "Manually determine the speaker input sensitivity using the slider. Press the headphones icon to listen to the audio and adjust the sensitivity while monitoring the volume."
-            error_message: "You can set it with a value between 0 to {{max}}."
-            no_device_error_message: "No speaker device detected."
 
     appearance:
         transparency:
@@ -131,15 +146,12 @@ config_page:
         mic_record_timeout:
             label: "Mic Record Timeout"
             desc: "Detects silence and, when the specified number of seconds has passed, considers the mic input to have ended. (Second(s))"
-            error_message: "It cannot be greater than '{{mic_phrase_timeout_label}}' with a value of 0 or more."
         mic_phrase_timeout:
             label: "Mic Phrase Timeout"
             desc: "Transcription processing is performed at intervals of the specified number of seconds."
-            error_message: "It cannot be set lower than '{{mic_record_timeout_label}}' with a value of 0 or more."
         mic_max_phrase:
             label: "Mic Max Words"
             desc: "It is the lower limit for the number of transcribed words, and only when this number is exceeded will the transcription results be displayed logs and send to VRChat."
-            error_message: "You can set a number equal to or greater than 0."
         mic_word_filter:
             label: "Mic Word Filter"
             desc: "If a registered word is detected, the text will not be sent. To add multiple words at once, separate them with a ',' (comma).\n*Duplicate words will not be registered."
@@ -148,15 +160,12 @@ config_page:
         speaker_record_timeout:
             label: "Speaker Record Timeout"
             desc: "Detects silence and, when the specified number of seconds has passed, considers the speaker input to have ended. (Second(s))"
-            error_message: "It cannot be greater than '{{speaker_phrase_timeout_label}}' with a value of 0 or more."
         speaker_phrase_timeout:
             label: "Speaker Phrase Timeout"
             desc: "Transcription processing is performed at intervals of the specified number of seconds."
-            error_message: "It cannot be set lower than '{{speaker_record_timeout_label}}' with a value of 0 or more."
         speaker_max_phrase:
             label: "Speaker Max Words"
             desc: "It is the lower limit for the number of transcribed words, and only when this number is exceeded will the transcription results be displayed logs."
-            error_message: "You can set a number equal to or greater than 0."
         select_transcription_engine:
             label: "Transcription Engine"
         whisper_weight_type:
