--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -6,6 +6,24 @@
 common:
     go_back_button_label: "戻る"
 
+common_error:
+    no_device_mic: "マイクデバイスが検出されませんでした。"
+    no_device_speaker: "スピーカーデバイスが検出されませんでした。"
+    threshold_invalid_value: "{{min}} から {{max}} までの数値で設定できます。"
+    failed_download_weight_ctranslate2: "CTranslate2 モデルのダウンロードに失敗しました。"
+    failed_download_weight_whisper: "Whisper モデルのダウンロードに失敗しました。"
+    translation_limit: "翻訳エンジンの使用制限に達したか、一時的に制限がかけられています。"
+    deepl_auth_key_invalid_length: "認証キーの文字数が間違っています。"
+    deepl_auth_key_failed_authentication: "認証キーが間違っているか、API使用制限が上限に達しています。"
+
+    invalid_value_mic_record_timeout: "0 以上で 「{{mic_phrase_timeout_label}}」 より大きくすることはできません。"
+    invalid_value_mic_phrase_timeout: "0 以上で 「{{mic_record_timeout_label}}」 より小さくすることはできません。"
+    invalid_value_mic_max_phrase: "0以上の数値を設定できます。"
+
+    invalid_value_speaker_record_timeout: "0 以上で 「{{speaker_phrase_timeout_label}}」 より大きくすることはできません。"
+    invalid_value_speaker_phrase_timeout: "0 以上で 「{{speaker_record_timeout_label}}」 より小さくすることはできません。"
+    invalid_value_speaker_max_phrase: "0以上の数値を設定できます。"
+
 main_page:
     translation: "翻訳"
     transcription_send: "音声認識（マイク）"
@@ -75,7 +93,6 @@ config_page:
             desc_for_automatic: "マイクの入力感度を自動的に調節する。"
             label_for_manual: "マイク入力感度の調整 (現在の設定: 手動)"
             desc_for_manual: "スライダーを調整して入力感度を手動で決められます。マイクのアイコンを押すと、実際に声を入力し、音量を確認しながら調節できます。"
-            error_message: "0 から {{max}} までの数値で設定できます。"
         speaker_device:
             label: "スピーカー （デバイス）"
             label_auto_select: "自動選択"
@@ -84,8 +101,6 @@ config_page:
             desc_for_automatic: "スピーカーの入力感度を自動的に調節する。"
             label_for_manual: "スピーカー入力感度の調整 (現在の設定: 手動)"
             desc_for_manual: "スライダーを調整して入力感度を手動で決められます。ヘッドフォンのアイコンを押すと、実際に音声を聞き取り、音量を確認しながら調節できます。"
-            error_message: "0 から {{max}} までの数値で設定できます。"
-            no_device_error_message: "スピーカーデバイスが検出されませんでした。"
 
     appearance:
         transparency:
@@ -121,7 +136,6 @@ config_page:
             save: "保存"
             edit: "編集"
             auth_key_success: "認証キーの更新が完了しました。"
-            auth_key_error: "認証キーが間違っているか、API使用制限が上限に達しています。"
 
     transcription:
         section_label_mic: "マイク"
@@ -130,15 +144,12 @@ config_page:
         mic_record_timeout:
             label: "入力が終了したとみなす無音時間"
             desc: "無音を検出し、設定された秒数経過すると、音声入力が終了したとみなします。"
-            error_message: "0 以上で 「{{mic_phrase_timeout_label}}」より大きくすることはできません。"
         mic_phrase_timeout:
             label: "一度に文字起こしする時間の長さ"
             desc: "設定された秒数ごとに文字起こし処理が行われます。"
-            error_message: "0 以上で 「{{mic_record_timeout_label}}」より小さくすることはできません。"
         mic_max_phrase:
             label: "送信するまでに保持する単語数"
             desc: "文字起こしされた単語数の下限値で、この数値を超えた場合のみ結果をVRChatへ送信し、ログに表示します。"
-            error_message: "0以上の数値を設定できます。"
         mic_word_filter:
             label: "ワードフィルター"
             desc: "登録された単語を検出すると、その文章は送信されません。\n「,」カンマで区切ると、まとめて複数の単語を追加できます。\n※重複した単語は登録されません。"
@@ -147,15 +158,12 @@ config_page:
         speaker_record_timeout:
             label: "入力が終了したとみなす無音時間"
             desc: "無音を検出し、設定された秒数経過すると、音声入力が終了したとみなします。"
-            error_message: "0 以上で「{{speaker_phrase_timeout_label}}」より大きくすることはできません。"
         speaker_phrase_timeout:
             label: "一度に文字起こしする時間の長さ"
             desc: "設定された秒数ごとに文字起こし処理が行われます。"
-            error_message: "0 以上で「{{speaker_record_timeout_label}}」より小さくすることはできません。"
         speaker_max_phrase:
             label: "ログとして表示するまでに保持する単語数"
             desc: "文字起こしされた単語数の下限値で、この数値を超えた場合のみ結果をログに表示します。"
-            error_message: "0以上の数値を設定できます。"
         select_transcription_engine:
             label: "音声認識で使用するエンジン"
         whisper_weight_type:
