--- a/locales/zh-Hans.yml
+++ b/locales/zh-Hans.yml
@@ -6,6 +6,24 @@
 common:
     go_back_button_label: "返回"
 
+common_error:
+    no_device_mic: # 未检测到他人语音 ?
+    no_device_speaker: # 未检测到他人语音 ?
+    threshold_invalid_value: # 数值应为 {{min}} 至 {{max}} 之间。 ? 设定的数值从 {{min}} 到 {{max}} ?
+    failed_download_weight_ctranslate2:
+    failed_download_weight_whisper:
+    translation_limit:
+    deepl_auth_key_invalid_length:
+    deepl_auth_key_failed_authentication: "授权密匙错误或已达API使用上限"
+
+    invalid_value_mic_record_timeout: "数值应为 0 至 「{{mic_phrase_timeout_label}}」"
+    invalid_value_mic_phrase_timeout: "转录间隔时间大于0秒且不能小于「{{mic_record_timeout_label}}」"
+    invalid_value_mic_max_phrase: "数值应为 0 以上"
+
+    invalid_value_speaker_record_timeout: "数值应为 0 至 「{{speaker_phrase_timeout_label}}」"
+    invalid_value_speaker_phrase_timeout: "转录间隔时间大于0秒且不能小于「{{speaker_record_timeout_label}}」"
+    invalid_value_speaker_max_phrase: "数值应为 0 以上"
+
 main_page:
     translation: "翻译"
     transcription_send: "你的语音转文字"
@@ -60,7 +78,6 @@ config_page:
             desc_for_automatic: "自动调整麦克风输入阈值"
             label_for_manual: "麦克风输入阈值(当前设置:手动)"
             desc_for_manual: "使用滑杆手动确定麦克风输入灵敏度。按下麦克风图标输入语音，并在监控音量的同时调节灵敏度。"
-            error_message: "数值应为 0 至 {{max}} 之间。"
         speaker_device:
             label: "他人语音 （设备）"
         speaker_dynamic_energy_threshold:
@@ -68,8 +85,6 @@ config_page:
             desc_for_automatic: "自动调节他人语音接收阈值"
             label_for_manual: "他人语音接收阈值(当前设置:手动)"
             desc_for_manual: "使用滑杆手动调整他人语音接收阈值.在按下耳机按钮时,请根据实际听到的声音调整该大小"
-            error_message: "设定的数值从 0 到 {{max}}"
-            no_device_error_message: "未检测到他人语音"
 
     appearance:
         transparency:
@@ -101,7 +116,6 @@ config_page:
             desc: "在使用的时候,使用时请在主屏幕上通过 DeepL_API 选择 {{translator}}\n※某些语言可能不支持"
             open_auth_key_webpage: "打开DeepL账号页面"
             auth_key_success: "授权密匙认证完成。"
-            auth_key_error: "授权密匙错误或已达API使用上限"
 
     transcription:
         section_label_mic: "你的麦克风"
@@ -109,15 +123,12 @@ config_page:
         mic_record_timeout:
             label: "语音输入结束后的静音时间"
             desc: "当检测到静音并经过设定的秒数后，语音输入即被视为完成。"
-            error_message: "数值应为 0 至 [{{mic_phrase_timeout_label}}]"
         mic_phrase_timeout:
             label: "转录间隔"
             desc: "在经过设定的时间后执行转录"
-            error_message: "转录间隔时间大于0秒且不能小于「{{mic_record_timeout_label}}」"
         mic_max_phrase:
             label: "麦克风发送时的最小单词数"
             desc: "转录字数的下限,只有超过这个数字,才会记录翻译结果并发送到VRC"
-            error_message: "数值应为 0 以上"
         mic_word_filter:
             label: "单词过滤器"
             desc: "检测出被记录的单词时,不会发送这段话\n如要添加多个单词,可以用逗号来分割\n※不会记录重复的单词"
@@ -126,15 +137,12 @@ config_page:
         speaker_record_timeout:
             label: "语音接收结束后的静音时间"
             desc: "当检测到静音并经过设定的秒数后，语音接收即被视为完成。"
-            error_message: "数值应为 0 至 「{{speaker_phrase_timeout_label}}」"
         speaker_phrase_timeout:
             label: "转录间隔"
             desc: "在经过设定的时间后执行转录"
-            error_message: "转录间隔时间大于0秒且不能小于「{{speaker_record_timeout_label}}」"
         speaker_max_phrase:
             label: "语音接收时的最小单词数"
             desc: "转录字数的下限,只有超过这个数字,才会记录转录结果"
-            error_message: "数值应为 0 以上"
         use_whisper_feature:
             label: "使用Whisper模型翻译"
             desc: "在某些语言中,语音识别的准确性可能会提高.语音识别的过程中,CPU占有率可能会提高,请根据你的pc性能来决定是否使用它."
