--- a/locales/ko.yml
+++ b/locales/ko.yml
@@ -29,6 +29,7 @@ main_page:
     transcription_send: "음성인식 (마이크)"
     transcription_receive: "음성인식 (스피커)"
     foreground: "항상 위로"
+
     language_settings: "언어 설정"
     your_language: "당신의 언어"
     translate_each_other_label: "양방향으로 번역"
@@ -37,11 +38,17 @@ main_page:
     translator: "번역 엔진"
     # translator_label_default: "기본값"
 
+    translator_selector:
+        is_selected_same_language:
+
     message_log:
         all: "전체"
         sent: "전송"
         received: "수신"
         system: "시스템"
+
+        show_resend_button:
+        resend_button_on_hover_desc:
 
     state_text_enabled: "Enabled"
     state_text_disabled: "Disabled"
@@ -54,24 +61,33 @@ main_page:
     updating: "업데이트 중..."
 
 update_modal:
-    update_software: "새 버전을 다운로드하고 재시작합니다.\n조금 시간이 걸립니다. 지금 시작할까요?"
-    deny_update_software: "나중에 하기"
-    accept_update_software: "업데이트 및 재시작"
-
+    cpu_desc:
+    cuda_desc:
+    cuda_compare_cpu_desc:
+    cuda_disk_space_desc:
+    close_modal:
+    download_latest_and_restart:
+    is_latest_version_already:
+    is_current_compute_device:
 
 config_page:
     version: "버전 {{version}}"
+    model_download_button_label:
     side_menu_labels:
+        device:
         appearance: "모양"
         translation: "번역"
         transcription: "음성인식"
         others: "기타"
+        hotkeys:
         advanced_settings: "고급 설정"
 
     device:
-        mic_host:
-            label: "마이크 호스트/드라이버"
-        mic_device:
+        check_volume:
+        label_auto_select:
+        label_host: "호스트/드라이버"
+        label_device:
+        mic_host_device:
             label: "마이크 장치"
         mic_dynamic_energy_threshold:
             label_for_automatic: "음성 입력 최소 볼륨 (현재 설정: 자동)"
@@ -111,15 +127,20 @@ config_page:
             desc: "오프라인 번역 시의 번역 모델을 변경합니다."
             small: "일반 모델 ({{capacity}})"
             large: "정밀 모델 ({{capacity}})"
+        ctranslate2_compute_device:
+            label:
         deepl_auth_key:
             label: "DeepL 인증키"
             desc: "사용시 메인화면에 있는 {{translator}}를 DeepL_API로 변경해 주세요.\n지원하지 않는 언어도 있습니다."
             open_auth_key_webpage: "DeepL 계정 페이지 열기"
+            save:
+            edit:
             auth_key_success: "인증키 갱신이 완료되었습니다."
 
     transcription:
         section_label_mic: "마이크"
         section_label_speaker: "스피커"
+        section_label_transcription_engines:
         mic_record_timeout:
             label: "최대 무음 시간"
             desc: "무음을 감지하고 설정된 시간(초)만큼의 시간이 지나면 음성 입력이 종료된 것으로 판단합니다."
@@ -143,29 +164,76 @@ config_page:
         speaker_max_phrase:
             label: "최대 입력 절(phrases) 수"
             desc: "식된 단어 수의 하한값으로, 이 수치를 초과하는 경우에만 결과를 로그에 표시합니다."
-        use_whisper_feature:
-            label: "음성 인식에 Whisper 모델을 사용"
-            desc: "일부 언어에서는 음성 인식의 정확도가 향상될 수 있어요. 음성 인식 중 CPU 사용률이 올라가기 때문에 사용하시는 PC의 사양을 고려하여 이 기능을 사용해주세요."
+        select_transcription_engine:
+            label:
         whisper_weight_type:
             label: "Whisper 모델 타입"
-            # desc: "기본적으로 용량이 많은 모델일수록 정밀도는 높지만, 음성 인식의 시간이 늘어나며 CPU 사용률도 늘어나요.각 모델의 설명은 문서를 참조해주세요.\n※특히 medium보다 용량이 큰 모델은 CPU의 성능에 따라서는 사용조차 어려울 수 있어요. "
+            desc:
             model_template: "{{model_name}} 모델 ({{capacity}})"
             recommended_model_template: "{{model_name}} 모델 ({{capacity}}) (권장)"
+        whisper_compute_device:
+            label:
+
+    vr:
+        single_line:
+        multi_lines:
+        overlay_enable:
+        restore_default_settings:
+        position:
+        rotation:
+        x_position:
+        y_position:
+        z_position:
+        x_rotation:
+        y_rotation:
+        z_rotation:
+        sample_text_button:
+            start:
+            stop:
+            sample_text:
+        opacity:
+        ui_scaling:
+        display_duration:
+        fadeout_duration:
+        common_settings:
+        tracker:
+        hmd:
+        left_hand:
+        right_hand:
+        overlay_show_only_translated_messages:
+            label:
 
     others:
+        section_label_sounds:
         auto_clear_the_message_box:
             label: "챗박스 자동 삭제"
         send_only_translated_messages:
             label: "번역된 메시지만 전송"
-        notice_xsoverlay:
-            label: "XSOverlay에서 알림 수신 기능 활성화"
-            desc: "수신된 메시지를 XSOverlay의 기능을 통해 알림으로 받아볼 수 있습니다."
         auto_export_message_logs:
             label: "대화 로그 자동 저장"
             desc: "logs 폴더에 텍스트 파일로 로그가 저장됩니다."
+        vrc_mic_mute_sync:
+            label:
+            desc:
         send_message_to_vrc:
             label: "VRChat에 메시지 전송"
             desc: "VRChat에 메시지를 보내지 않고 사용할 수 있는 방법이 있지만 지원되지 않습니다. VRChat에 메시지를 보내려면 이 기능을 활성화하세요."
+        notification_vrc_sfx:
+            label:
+            desc:
+        send_received_message_to_vrc:
+            label:
+            desc:
+
+    hotkeys:
+        toggle_vrct_visibility:
+            label:
+        toggle_translation:
+            label:
+        toggle_transcription_send:
+            label:
+        toggle_transcription_receive:
+            label:
 
     advanced_settings:
         osc_ip_address:
@@ -174,3 +242,5 @@ config_page:
             label: "OSC 포트"
         open_config_filepath:
             label: "설정 파일 열기"
+        switch_compute_device:
+            label:
