--- a/locales/zh-Hant.yml
+++ b/locales/zh-Hant.yml
@@ -36,7 +36,7 @@ main_page:
     swap_button_label: "交換語言"
     target_language: "目標語言"
     translator: "翻譯器"
-    # translator_label_default: "預設"
+    translator_label_default: "預設"
 
     translator_selector:
         is_selected_same_language:
